--- a/imgui.ini
+++ b/imgui.ini
@@ -2,3 +2,19 @@
 Pos=60,60
 Size=400,400
 
+[Window][Dear ImGui Demo]
+Pos=874,119
+Size=550,680
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=1431,54
+Size=339,341
+
+[Window][Debug]
+Pos=366,136
+Size=200,150
+
+[Window][Settings]
+Pos=1216,406
+Size=479,556
+
